fix: increase canvas height to 350vh for more spacing between photo rows

--- a/src/components/Collage.css
+++ b/src/components/Collage.css
@@ -2,7 +2,7 @@
 .collage-canvas {
   position: relative;
   width: 100vw;
-  height: 200vh;
+  height: 350vh;
   /* warm linen background */
   background-color: #f5f0e8;
   background-image:
